--- a/package.json
+++ b/package.json
@@ -23,5 +23,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/princefreto-bot/motosu.git"
+  },
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/princefreto-bot/motosu/issues"
+  },
+  "homepage": "https://github.com/princefreto-bot/motosu#readme"
 }
