--- a/package.json
+++ b/package.json
@@ -3,21 +3,7 @@
   "version": "1.0.0",
   "description": "Motosu Agencies - Plateforme de parrainage et micro-tâches",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
-}
-  "description": "Plateforme Motosu Agencies - Parrainage et activités vidéo",
-  "main": "server.js",
-  "engines": {
-    "node": ">=18.0.0"
-  },
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
@@ -33,14 +19,16 @@
   "author": "Motosu Agencies",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/princefreto-bot/motosu.git"
   },
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/princefreto-bot/motosu/issues"
   },
