--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "motosu-agencies",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Motosu Agencies - Plateforme de parrainage et micro-tâches",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node --watch server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -13,9 +14,16 @@
     "jsonwebtoken": "^9.0.2",
     "helmet": "^7.1.0",
     "cors": "^2.8.5",
-    "express-validator": "^7.0.1"
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "compression": "^1.7.4",
+    "hpp": "^0.2.3",
+    "dotenv": "^16.3.1"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "keywords": ["motosu", "agencies", "parrainage", "fintech", "africa"],
+  "author": "Motosu Agencies",
+  "license": "PROPRIETARY"
 }
