--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node --watch server.js"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "bcryptjs": "^2.4.3",
